test/syntax/solidity_not_support/memberLookup/contract_not_payable_send.sol
contract C {
    function f() public {
        address(this).send(10);
    }
}

// ----
// ParserError 2314: (61-65): Expected identifier but got 'send'
